<?xml version="1.0"?>
<package format="2">
  <name>RobotControl</name>
  <version>0.1.0</version>
  <description>The RobotControl package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rviz</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
